--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
               <span class="material-symbols-outlined text-5xl text-gray-400 dark:text-gray-500 animate-bounce">cloud_upload</span>
               <div class="flex flex-col items-center gap-2">
                 <p class="text-[#131811] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em]">Drag & drop your crop image here</p>
-                <p class="text-gray-600 dark:text-gray-400 text-sm font-normal leading-normal">Your image should be in .jpeg or .png format, up to 10MB.</p>
+                <p class="text-gray-600 dark:text-gray-400 text-sm font-normal leading-normal">Your image should be in .jpg, .jpeg or .png format, up to 10MB.</p>
               </div>
               <input type="file" id="fileInput" accept="image/*" class="hidden">
               <button id="browseBtn" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-accent text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-accent-hover transition-all hover:scale-105">
